Created functions to update the names of players and fixed the game bug with draws overriding wins on the last move

--- a/index.html
+++ b/index.html
@@ -38,22 +38,12 @@
       <div data-value="player2" class="player-text">
         <div>Player 2</div><img src="images/icons8-edit-64.png" alt="" class="image"></div>
       <div class="player-1-block w-form">
-        <form id="wf-form-Player-1-Form" name="wf-form-Player-1-Form" data-name="Player 1 Form" class="form"><input type="text" class="text-field w-input" maxlength="256" name="player1" data-name="player1" placeholder="Player 1" id="player" required=""><input type="submit" value="Update" data-wait="Please wait..." class="w-button"></form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
-        </div>
+          <input type="text" class="text-field w-input" maxlength="256" name="player1" data-name="player1" placeholder="Player 1" id="player-1" required="">
+          <input type="button" id="player-1-submit" value="Update" data-wait="Please wait..." class="w-button">
       </div>
       <div class="player-2-block w-form">
-        <form id="wf-form-Player-2-Form" name="wf-form-Player-2-Form" data-name="Player 2 Form" class="form"><input type="text" class="text-field w-input" maxlength="256" name="player2" data-name="player2" placeholder="Player 2" id="player-2" required=""><input type="submit" value="Update" data-wait="Please wait..." class="w-button"></form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
-        </div>
+          <input type="text" class="text-field w-input" maxlength="256" name="player2" data-name="player2" placeholder="Player 2" id="player-2" required="">
+          <input type="button" id="player-2-submit" value="Update" data-wait="Please wait..." class="w-button">
       </div>
     </div>
   </div>
