Created a function to reset the game and hide the player names and show the reset button when you've started playing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <div data-value="7" class="tic-tac-toe-box _8"></div>
       <div data-value="8" class="tic-tac-toe-box _9"></div>
     </div>
-    <div class="gameboard-icons"><img src="images/icons8-trash.svg" alt="" class="reset-game"><img src="images/icons8-refresh.svg" alt="" class="refresh-game"></div>
+    <div class="gameboard-icons">
+      <img src="images/icons8-refresh.svg" alt="" class="refresh-game">
+    </div>
     <div class="player-names">
       <div data-value="player1" class="player-text">
         <div>Player 1</div><img src="images/icons8-edit-64.png" alt="" class="image"></div>
